kubernetes/customer.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: customer-microservice
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: bluecompute
        tier: backend
        micro: customer
    spec:
      containers:
      - name: customer-service
        image: registry.ng.bluemix.net/chrisking/us-micro-customer:jkwong-dev
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /var/run/secrets/binding-refarch-cloudantdb
          name: binding-refarch-cloudantdb
        - mountPath: /var/run/secrets/hs256-key
          name: hs256-key
        ports:
        - containerPort: 8080
      volumes:
      - name: binding-refarch-cloudantdb
        secret:
          defaultMode: 420
          secretName: binding-refarch-cloudantdb
      - name: hs256-key
        secret:
          defaultMode: 420
          secretName: hs256-key
