kubernetes/customer-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: customer-service
  labels:
    app: bluecompute
    tier: backend
    micro: customer
spec:
  rules:
  - http:
      paths:
      - path: /micro/customer
        backend:
          serviceName: customer-service
          servicePort: 8080
